--- a/decima clase/index.html
+++ b/decima clase/index.html
@@ -6,7 +6,7 @@
     <title>Planetas</title>
 </head>
 <body>
-    <table id= "planetas"></table> 
+    <table id= "ingredientes"></table> 
     <script src="tabla.js"></script>
 </body>
 </html>
