--- a/tareav2/index.html
+++ b/tareav2/index.html
@@ -1,11 +1,11 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>arrey2</title>
+<!DOCTYPE html>
+<html lang="es">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>arrey2</title>
+    
     <style>
         body
         {color:rgb(74, 171, 196);
@@ -46,7 +46,7 @@
         <input type="date" name="fecha">
         <input type="submit">
     </form>
-    <table id="trabajo"></table>
-    <script src="tareas2.js"></script> 
+    <table id="listaTareas"></table>
+    <script src="tareasv2.js"></script> 
 </body>
 </html>
