--- a/segunda clase/MerenguesCaseros.html
+++ b/segunda clase/MerenguesCaseros.html
@@ -24,7 +24,7 @@
       h1 {
         font-size: 2em;
         padding: 10px;
-        color:lightskyblue;
+        color:orange;
         text-align: center;
       }
       h2 {
