--- a/primera clase/receta merengues caseros.html
+++ b/primera clase/receta merengues caseros.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html style="font-family:courier;">
 <heat style="text-align:center"> 
- <h1 style="color:orange ; font-size:200%";>MERENGUES CASEROS</h1>
+ <h1 style="color:skyblue ; font-size:200%";>MERENGUES CASEROS</h1>
 </heat>
 
 <boddy>
  <p> En esta receta te enseñamos de forma detallada cómo hacer merengues caseros para que pases de preguntarte cómo hacer merengues a disfrutar de ellos en un dos por tres.</p>
 
- <h2 style="color:orange ; font-size:150%";>INGREDIENTES</h2>
+ <h2 style="color:midnightblue; font-size:150%";>INGREDIENTES</h2>
   <ul> 
    <li>2 claras de huevo</li>
    <li>100g de azucar glas</li>
