--- a/tarea vacaciones 3L/pelotita/index.html
+++ b/tarea vacaciones 3L/pelotita/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EVENTOS</title>
+    <title>JUEGO</title>
 </head>
-<body>
-    <canvas id="pelotitaAnimada" width="500px" height="300"></canvas>
-    <script src="pelotita.js"></script> 
+<body style="background-color: black;">
+    <canvas id="pelotitaAnimada" width="4000px" height="2500"></canvas>
+    <script src="pelotita.js"></script>}
 </body>
 </html>
