--- a/primera clase/receta merengues caseros.html
+++ b/primera clase/receta merengues caseros.html
@@ -7,7 +7,7 @@
 <boddy>
  <p> En esta receta te enseñamos de forma detallada cómo hacer merengues caseros para que pases de preguntarte cómo hacer merengues a disfrutar de ellos en un dos por tres.</p>
 
- <h2 style="color:midnightblue; font-size:150%";>INGREDIENTES</h2>
+ <h2 style="color:yellowgreen; font-size:150%";>INGREDIENTES</h2>
   <ul> 
    <li>2 claras de huevo</li>
    <li>100g de azucar glas</li>
